      new release. That is far better than "They just crash blindly" (ADAMK)
    - Create a new main_directory_root settting distinct from the existing
      default_projects_directory one, specifically for setting the default
      root of the directory tree. It will continue to be pointed to
      my_documents by default (the original may change) (ADAMK)
    - made Padre::Wx::Dialog::ModuleStart configuration translation-safe (ZENOG)
    - Updated German translation (ZENOG)
    - Add Java and BibTeX to MIME types (ZENOG)
    - Ack ("find in files") output is now more 'clickable', but still not
      perfect (ZENOG)
    - Fix File::Open3::open3() call to be IPC::Open3::open3() (BRICAS)
    - Fix #969: crash when switching language after using Ack (ZENOG)
    - Remove unnecessary Wx::gettext calls from Padre::Wx::Dialog::Preferences
      that lead to missing translations (ZENOG)
    - Description field is hidden by default in the regex editor dialog.
      A checkbox now optionally toggles its visibility (AZAWAWI)
    - Padre::Wx::FindResult: Get rid of global variable, shorter column
      titles, both columns now wxLIST_AUTOSIZE (ZENOG)
    - Call relocale() for all elements of the Bottom panel (ZENOG)
    - Remember sorting order in session manager (SEWI)

0.66 2010.07.01
    - Improved the quality and integration of the default window size (ADAMK)
    - The non-blocking IO upgrade in 0.65 meant that Padre could no longer
      open files on Windows. Fixed (ADAMK)
    - Minor improvements to the About dialog (ADAMK)

0.65 2010.07.01
    - Task 2.0 API landed on trunk (and everything breaks) (ADAMK)
    - Converted the FunctionList GUI component to work via a task (ADAMK)
    - Padre::Role::Task role added to allow any object in Padre
      to be the "owner" of task and automatically handle which
      tasks are still relevant to the UI state at the time the task
      is completed, and ignore the ones that aren't (ADAMK)